--- a/src/main/asciidoc/WebFX.adoc
+++ b/src/main/asciidoc/WebFX.adoc
@@ -10,22 +10,25 @@ Last updated: {docdate}
 
 === Prerequisite
 
-To develop WebFX apps, you will need the following software installed on your development machine:
+To develop WebFX applications, you will need the following software installed on your development machine:
 
  * JDK 13 or above
  * Maven
  * Git
+ * Your preferred Java IDE
+
+IMPORTANT: Be sure that you can invoke `java`, `mvn` and `git` directly from the terminal. The WebFX CLI will invoke `mvn` and `java` without specifying their full path.
 
 === Introducing the WebFX CLI
 
-The WebFX CLI is an essential tool to assist you developing WebFX apps. It will create and maintain your modules and build files, such as:
+The WebFX CLI is an essential tool to assist you developing WebFX applications. It will create and maintain your modules and build files, such as:
 
 * pom.xml (Maven module files)
 * module.gwt.xml (GWT module files)
 * module-info.java (Java module files)
 * and many other files (GWT super sources, GWT bundles, Gluon builds, GraalVM conf, ...)
 
-NOTE: The WebFX CLI is required only on your local development machine (not on your CI/CD pipeline). And it is not required for the build, or the execution of WebFX apps.
+NOTE: The WebFX CLI is required only on your local development machine (not on your CI/CD pipeline). It is not required for the build, or the execution of WebFX apps.
 
 Your only inputs will be centralized in the WebFX module files (named webfx.xml), and the tool will automatically generate the rest of the build chain from these webfx.xml files, combined with an analysis of your source code. This includes all your dependencies. The tool also takes over the aspects of cross-platform development: when a feature is platform-dependent (a different implementations exists for each platform), the tool will pick up the right modules in the final executable modules (the ones matching the platform targeted by the executable module).
 
@@ -130,15 +133,39 @@ If later you want to update the WebFX CLI to the latest SNAPSHOT version, you ju
 
 Let's create our first WebFX application. We need to create the repository folder and ask the WebFX CLI to initialize it, passing it the groupId, artifactId and version of our application.
 
- mkdir mywebfxapp
- cd mywebfxapp
- webfx init org.example mywebfxapp 1.0.0-SNAPSHOT
+ mkdir webfx-example
+ cd webfx-example
+ webfx init org.example webfx-example 1.0.0-SNAPSHOT
 
 ==== Creating your application modules
 
- webfx create application --class org.example.mywebfxapp.MyWebFxApplication --helloWorld
+ webfx create application --class org.example.webfxexample.WebFxExampleApplication --helloWorld
 
-==== Updating your modules
+==== Building your application
+
+ webfx build
+
+==== Running your application
+
+You can run the OpenJFX version of your application with the following command:
+
+ webfx -m webfx-example-application-openjfx run
+
+You can run the GWT version of your application with the following command:
+
+ webfx -m webfx-example-application-gwt run
+
+=== Developing in your IDE
+
+We will give the instructions for IntelliJ IDEA, but you should be able to easily transpose them to other Java IDEs such as NetBeans or Eclipse.
+
+==== Opening the project
+
+==== Configuring the OpenJFX application
+
+==== Building and running the GWT application
+
+==== Making changes
 
  webfx update
 
